MB-43559: Ensure eviction doesn't stop at high watermark if no replicas

In order to keep active data in memory preferentially,
PagingVisitor::visitBucket skipped evicting from active vbuckets if
both:

 1. active resident ratio < replica resident ratio
 2. current memory usage < high watermark

However, if there are _no_ replica vbuckets on the node

   store.getReplicaResidentRatio()

defaults to 100%.
As a result, once the active vbuckets became <100% resident, 1. is
always true. Given this, the PagingVisitor would evict until `mem_used
< mem_high_wat` (making 2. true), and would then skip any remaining
vbuckets.

This meant eviction would never reach the low watermark.

Fixed by removing the replica residency check from
PagingVisitor::visitBucket. This has negligible impact on eviction, as
active data is _already_ kept in memory preferentially after changes
for MB-40531.

Change-Id: I08b3b3de9a9a35673f2e9596652e370484ab6267
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/143661
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>